--- a/Inventory/Inventory/View/Login/Login.xaml
+++ b/Inventory/Inventory/View/Login/Login.xaml
@@ -21,8 +21,7 @@
            AbsoluteLayout.LayoutFlags="PositionProportional"
            Aspect="AspectFill"
            HorizontalOptions="Center"
-           Source="http://www.hubert-herald.nl/Brunei_bestanden/image024.jpg"
-        />
+           Source="http://www.hubert-herald.nl/Brunei_bestanden/image024.jpg"/>
         
         
         
