--- a/Inventory/Inventory/View/Scan/ScanPage.xaml
+++ b/Inventory/Inventory/View/Scan/ScanPage.xaml
@@ -1,8 +1,7 @@
 ﻿<?xml version="1.0" encoding="utf-8" ?>
 <ContentPage xmlns="http://xamarin.com/schemas/2014/forms"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
-             x:Class="Inventory.View.Scan.ScanPage"
-             BindingContext="{x:Binding ScanMessage,Mode=OneTime}">
+             x:Class="Inventory.View.Scan.ScanPage">
 
     <ContentPage.Content>
         <StackLayout>
@@ -18,31 +17,30 @@
                 />
                 <!-- I want the picture here to show the picture taken of the item, the picture should be a bindable image-->
             </AbsoluteLayout>
-
+            
             <Label Text="" x:Name="ScannedCode" TextColor="Red" HorizontalOptions="Center"/>
 
-            <!--Ended up needing this button as ZXing UI navigation fails to go back to main menu if no qr/barcode scanned-->
-            <StackLayout Padding="30,10,30,10" HorizontalOptions="CenterAndExpand">
-                <Button Text="New Scan" Clicked="ScanButton_Clicked"/>
-                <Label Text="{Binding ScanMessage}" 
-                       TextColor="Black" 
-                       HorizontalOptions="Center" 
-                       FontSize="Medium" 
-                       HorizontalTextAlignment="Center"
-                />
-                <!-- This label should be made so that the basic details of the item are returned after the scan. To be made bindable -->
-            </StackLayout>
 
-            <StackLayout HorizontalOptions="End" Padding="0,0,30,0">
-                <Button x:Name="ItemDetailsButton" 
-                        Text="View Item Details" 
-                        Clicked="ViewItemDetailsButton_Clicked" 
-                        IsEnabled="False"
-                        IsVisible="False"/>
+ 
+            <!--<StackLayout Padding="30,10,30,10" HorizontalOptions="CenterAndExpand">
+            
+                <Button Text="New Scan" Clicked="ScanButton_Clicked"/>
+                <Label Text="Please scan the item barcode/QR code or enter the serial number" TextColor="Black" HorizontalOptions="Center" FontSize="Medium" HorizontalTextAlignment="Center"/>-->
+          
+          <!-- This label should be made so that the basic details of the item are returned after the scan. To be made bindable --><!--
+            </StackLayout>-->
+          
+            <StackLayout HorizontalOptions="End" Padding="0,0,10,0">
+                <Button Text="View Item Details" Clicked="ViewItemDetailsButton_Clicked"/>
                 <!-- I also want this view option to popup only after a scan has been inputted -->
                 <!-- The button should open up the ItemDetailsPage which should apply the scanned ID to return that item's details -->
             </StackLayout>
 
+
+            <!--<StackLayout Padding="30,10,30,10">
+                <Button Text="New Scan" Clicked="ScanButton_Clicked"/>
+                <Label Text="Please scan the item barcode/QR code or enter the serial number" TextColor="Black" HorizontalOptions="Center" FontSize="Medium" HorizontalTextAlignment="Center"/>
+            </StackLayout>-->
         </StackLayout>
     </ContentPage.Content>
 
