--- a/Inventory/Inventory/View/MainMenu.xaml
+++ b/Inventory/Inventory/View/MainMenu.xaml
@@ -4,7 +4,8 @@
     Title="Main Menu"
     xmlns="http://xamarin.com/schemas/2014/forms"
     xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
-    x:Class="Inventory.View.MainMenu">
+    x:Class="Inventory.View.MainMenu"
+    NavigationPage.HasNavigationBar="False">
     
     <ContentPage.Content>
         
@@ -21,10 +22,11 @@
                 RowSpacing="20">
     <!--Add Button--> 
                 <BoxView 
-                   BackgroundColor="White"     
-                   Opacity="0.7"
-                   Grid.Column="0"
-                   Grid.Row="0"
+                    BackgroundColor="White"     
+                    Opacity="0.7"
+                    Grid.Column="0"
+                    Grid.Row="0"
+                    StyleClass="Rounded"
                 />
                 <Button
                     Grid.Column="0"
