--- a/Inventory/Inventory/View/Scan/ScanPage.xaml
+++ b/Inventory/Inventory/View/Scan/ScanPage.xaml
@@ -5,23 +5,8 @@
 
     <ContentPage.Content>
         <StackLayout>
-
-            <AbsoluteLayout>
-                <Image
-                        BackgroundColor="Gray"
-                        AbsoluteLayout.LayoutBounds="0.5,0.1,200,200"
-                        AbsoluteLayout.LayoutFlags="PositionProportional"
-                        x:Name="PictureTaken"
-                        HorizontalOptions="FillAndExpand"
-                        VerticalOptions="FillAndExpand"
-                />
-                <!-- I want the picture here to show the picture taken of the item, the picture should be a bindable image-->
-            </AbsoluteLayout>
-            
             <Label Text="" x:Name="ScannedCode" TextColor="Red" HorizontalOptions="Center"/>
 
-
- 
             <!--<StackLayout Padding="30,10,30,10" HorizontalOptions="CenterAndExpand">
             
                 <Button Text="New Scan" Clicked="ScanButton_Clicked"/>
@@ -30,11 +15,11 @@
           <!-- This label should be made so that the basic details of the item are returned after the scan. To be made bindable --><!--
             </StackLayout>-->
           
-            <StackLayout HorizontalOptions="End" Padding="0,0,10,0">
+            <!--<StackLayout HorizontalOptions="End" Padding="0,0,10,0">
                 <Button Text="View Item Details" Clicked="ViewItemDetailsButton_Clicked"/>
-                <!-- I also want this view option to popup only after a scan has been inputted -->
-                <!-- The button should open up the ItemDetailsPage which should apply the scanned ID to return that item's details -->
-            </StackLayout>
+                --><!-- I also want this view option to popup only after a scan has been inputted -->
+                <!-- The button should open up the ItemDetailsPage which should apply the scanned ID to return that item's details --><!--
+            </StackLayout>-->
 
 
             <!--<StackLayout Padding="30,10,30,10">
